--- a/lib/flappy_web/components/layouts/root.html.heex
+++ b/lib/flappy_web/components/layouts/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="overflow-y: auto">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,10 +12,7 @@
     </script>
   </head>
   <div class="bg-black opacity-[0.7] h-full w-full fixed -z-10"></div>
-  <body
-    class="bg-cover bg-center bg-no-repeat h-full"
-    style="background-image: url('/images/cityscape.webp');"
-  >
+  <body class="bg-fixed min-h-screen" style="background-image: url('/images/cityscape.webp');">
     <%= @inner_content %>
   </body>
 </html>
