--- a/lib/flappy_web/components/layouts/root.html.heex
+++ b/lib/flappy_web/components/layouts/root.html.heex
@@ -8,11 +8,10 @@
       <%= assigns[:page_title] || "Flappy" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
-    </script>
+    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
   <div class="bg-black opacity-[0.7] h-full w-full fixed -z-10"></div>
-  <body class="bg-fixed min-h-screen" style="background-image: url('/images/cityscape.webp');">
+  <body class="min-h-screen">
     <%= @inner_content %>
   </body>
 </html>
