fixed it! I fixed it!!!

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,7 +10,7 @@ html, body {
 
 body {
   min-height: 100vh;
-  background: url('/images/cityscape.webp') repeat-x;
+  background: url('/images/cityscape.webp') repeat;
   animation: scrollBackground 60s linear infinite;
 }
 
