--- a/lib/flappy_web/components/layouts/app.html.heex
+++ b/lib/flappy_web/components/layouts/app.html.heex
@@ -25,6 +25,5 @@
   </div>
 </header> --%>
 <main class="sm:px-6 lg:px-8 z-100 ">
-  <.flash_group flash={@flash} />
-  <%= @inner_content %>
+  <.flash_group flash={@flash} /> <%= @inner_content %>
 </main>
