--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,48 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+html, body {
+  overflow: hidden;
+}
+
+.explosion {
+  animation: explode 0.15s ease-out;
+  transform-origin: center;
+}
+
+@keyframes explode {
+  0% {
+    transform: scale(0.8);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 0.9;
+  }
+}
+
+body {
+  min-height: 100vh;
+  background: url('/images/cityscape.webp') repeat;
+  animation: scrollBackground 60s linear infinite;
+  z-index: 40;
+}
+
+@keyframes scrollBackground {
+  from {
+    background-position: 100% 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+
+@keyframes glow {
+  0% { box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de, 0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de; }
+  100% { box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de; }
+}
+
+.power-up-glow {
+  animation: glow 1.5s ease-in-out infinite alternate;
+}
