--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,20 +31,20 @@ body {
   z-index: 40;
 }
 
-@keyframes scrollBackground {
+/* @keyframes scrollBackground {
   from {
     background-position: 100% 0;
   }
   to {
     background-position: 0 0;
-  }
-}
+  } */
+/* } */
 
-@keyframes glow {
+/* @keyframes glow {
   0% { box-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff00de, 0 0 35px #ff00de, 0 0 40px #ff00de, 0 0 50px #ff00de, 0 0 75px #ff00de; }
   100% { box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de; }
 }
 
 .power-up-glow {
   animation: glow 1.5s ease-in-out infinite alternate;
-}
+} */
