--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -26,8 +26,11 @@ html, body {
 
 body {
   min-height: 100vh;
-  background: url('/images/cityscape.webp') repeat;
-  animation: scrollBackground 60s linear infinite;
+  background: url('/images/cityscape.webp') no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   z-index: 40;
 }
 
