--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -26,7 +26,7 @@ html, body {
 
 body {
   min-height: 100vh;
-  background: url('/images/cityscape.webp') no-repeat center center fixed;
+  background: url('/images/cityscape2.webp') no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
